updates footer and navbar

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,12 +7,19 @@
     <div class="col l6 s12" id="footer_logo">
       <%= link_to image_tag("presented.png"), "https://theironyard.com", target: "_blank" %>
     </div>
-
+  </div>
+  <div class="row">
+    <div id="slacks">
+      <h5>Join The Slacks 👉  <script async defer src="https://aqueous-wave-44276.herokuapp.com/slackin.js?large"></script></h5>
+    </div>
   </div>
 </div>
 <div class="footer-copyright">
   <div class="container">
-  Made with <span id="taco">🌮</span>s in <%= link_to "Houston", "http://theironyard.com/houston", class: "tiygray-text text-lighten-3" %>
-  <div class="right"><h5>Join The Slacks 👉  <script async defer src="https://aqueous-wave-44276.herokuapp.com/slackin.js?large"></script></h5></div>
+    <div class="row">
+      <div class="taco">
+        Made with <span id="taco">🌮</span>s in <%= link_to "Houston", "http://theironyard.com/houston", class: "tiygray-text text-lighten-3" %>
+      </div>
+    </div>
   </div>
 </div>
