--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,3 @@
-@import "materialize/components/color";
 @import 'materialize';
 @import "font-awesome-sprockets";
 @import "font-awesome";
@@ -105,7 +104,7 @@ main {
   html {
       font-size: 13px;
   }
-  #footer_about, #footer_logo {
+  #footer_about, #footer_logo, .taco, #slacks {
     text-align: center;
   }
 }
@@ -113,6 +112,10 @@ main {
 @media #{$large-and-up} {
 
   #footer_logo {
+    text-align: right;
+  }
+
+  #slacks{
     text-align: right;
   }
 }
