adds mentor profile page

--- a/app/views/home/slack_mentor.html.erb
+++ b/app/views/home/slack_mentor.html.erb
@@ -26,5 +26,5 @@
   <h3>That's it. Let's Get Hacking!</h3>
 </div>
 <div class="row">
-  <%= link_to "Get Started", root_path, class: "btn-large btn-primary" %>
+  <%= link_to "Let's Go!", users_path, class: "btn-large btn-primary" %>
 </div>
