--- a/app/views/judges/index.html.erb
+++ b/app/views/judges/index.html.erb
@@ -1,1 +1,14 @@
 <h1>Judges Stuff</h1>
+
+
+<h3>Teams:</h3>
+
+<% School.joins(:teams).distinct.each do |campus| %>
+  <ul class="collection with-header">
+    <li class="collection-header"><h4><%= campus.city %></h4></li>
+    <% campus.teams.each do |team| %>
+      <li class="collection-item"><%= link_to team.name, team %></li>
+    <% end %>
+  </ul>
+
+<% end %>
