--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Judge Registration</h2>
+<h2><%= resource_name.capitalize %> Registration</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
@@ -7,7 +7,9 @@
     <div class="form-inputs">
       <%= f.input :first_name %>
       <%= f.input :last_name %>
+      <%= f.input :github_username %>
       <%= f.input :email, required: true, autofocus: true %>
+      <%= f.input :judge, checked: "checked" %>
       <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
       <%= f.input :password_confirmation, required: true %>
     </div>
