--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,8 +12,13 @@
       <h2><%= @user.name %></h2>
     </div>
     <div class="row">
+      <% unless @user.judge? %>
       <h4><em><%= @user.school.city %> Campus</em></h4>
+      <% end %>
     </div>
+    <% if @user.judge? %>
+      <h4><em>Judge</em></h4>
+    <% end %>
     <div class="row">
       <h5><em><%= @user.team.name if @user.team %></em></h5>
     </div>
