--- a/app/views/teams/results.html.erb
+++ b/app/views/teams/results.html.erb
@@ -1,15 +1,14 @@
-Here are the results:
+<h2>The results:</h2>
 
-<ul class="collection with-header">
+<!-- <ul class="collection with-header">
   <li class="collection-header"><h4>Top Overall Teams</h4></li>
-  <li class="collection-item">Alvin</li>
-</ul>
+</ul> -->
 
 <ul class="collection with-header">
   <li class="collection-header"><h4>Top Tech Teams</h4></li>
   <ol>
   <% @top_tech.each do |tt| %>
-    <li class="collection-item" id="ordered"><%= Team.find(tt.cacheable_id).name %>(<%= Team.find(tt.cacheable_id).school.city %>)<br /> Average - <%= tt.avg %></li>
+    <li class="collection-item" id="ordered"><%= Team.find(tt.cacheable_id).name %><br /> Average - <%= tt.avg %></li>
   <% end %>
 </ol>
 
@@ -20,7 +19,7 @@ Here are the results:
   <li class="collection-header"><h4>Top Real World Application Teams</h4></li>
   <ol>
     <% @top_application.each do |ta| %>
-    <li class="collection-item" id="ordered"><%= Team.find(ta.cacheable_id).name %> (<%= Team.find(ta.cacheable_id).school.city %>)<br /> Average - <%= ta.avg %></li>
+    <li class="collection-item" id="ordered"><%= Team.find(ta.cacheable_id).name %><br /> Average - <%= ta.avg %></li>
     <% end %>
   </ol>
 </ul>
@@ -30,7 +29,7 @@ Here are the results:
   <li class="collection-header"><h4>Top Creativity Teams</h4></li>
   <ol>
     <% @top_creativity.each do |tc| %>
-    <li class="collection-item" id="ordered"><%= Team.find(tc.cacheable_id).name %> (<%= Team.find(tc.cacheable_id).school.city %>)<br /> Average - <%= tc.avg %> </li>
+    <li class="collection-item" id="ordered"><%= Team.find(tc.cacheable_id).name %> <br /> Average - <%= tc.avg %> </li>
     <% end %>
   </ol>
 </ul>
